--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1"
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-slug": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
