--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "rehype-highlight": "^7.0.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "remark-slug": "^8.0.0"
+    "remark-slug": "^8.0.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
