--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.525.0",
+    "prompt-sync": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^7.6.2",
     "rehype-highlight": "^7.0.2",
     "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-slug": "^8.0.0",
     "zustand": "^5.0.6"
