--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -23,11 +25,13 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-slug": "^8.0.0",
+    "simple-git": "^3.28.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
