--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@octokit/rest": "^22.0.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
