--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "velogit",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@giscus/react": "^3.1.0",
-    "@octokit/rest": "^22.0.0",
-    "clsx": "^2.1.1",
-    "file-saver": "^2.0.5",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.6.2",
-    "rehype-highlight": "^7.0.2",
-    "rehype-slug": "^6.0.0",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-slug": "^8.0.0",
-    "simple-git": "^3.28.0",
-    "zustand": "^5.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/file-saver": "^2.0.7",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "highlight.js": "^11.11.1",
-    "postcss": "^8.5.6",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "prompt-sync": "^4.2.0",
-    "tailwindcss": "3.4.3",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0"
-  }
+    "name": "velogit",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "@giscus/react": "^3.1.0",
+        "@octokit/rest": "^22.0.0",
+        "clsx": "^2.1.1",
+        "file-saver": "^2.0.5",
+        "gray-matter": "^4.0.3",
+        "lucide-react": "^0.525.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
+        "react-router-dom": "^7.6.2",
+        "rehype-highlight": "^7.0.2",
+        "rehype-slug": "^6.0.0",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.1",
+        "remark-slug": "^8.0.0",
+        "simple-git": "^3.28.0",
+        "zustand": "^5.0.6"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.0",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/file-saver": "^2.0.7",
+        "@types/node": "^24.0.3",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitejs/plugin-react-swc": "^3.9.0",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "gh-pages": "^6.3.0",
+        "globals": "^16.0.0",
+        "highlight.js": "^11.11.1",
+        "postcss": "^8.5.6",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.13",
+        "prompt-sync": "^4.2.0",
+        "tailwindcss": "3.4.3",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
+        "vite": "^6.3.5",
+        "vite-plugin-svgr": "^4.3.0"
+    }
 }
