--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@octokit/rest": "^22.0.0",
         "clsx": "^2.1.1",
         "file-saver": "^2.0.5",
+        "framer-motion": "^12.23.9",
         "gray-matter": "^4.0.3",
         "lucide-react": "^0.525.0",
         "react": "^19.1.0",
