--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dependencies": {
         "@giscus/react": "^3.1.0",
         "@octokit/rest": "^22.0.0",
+        "@tanstack/react-query": "^5.84.1",
+        "axios": "^1.11.0",
         "clsx": "^2.1.1",
         "file-saver": "^2.0.5",
         "framer-motion": "^12.23.9",
         "gray-matter": "^4.0.3",
         "lottie-react": "^2.4.1",
         "lucide-react": "^0.525.0",
+        "qs": "^6.14.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
@@ -38,6 +41,7 @@
         "@tailwindcss/typography": "^0.5.16",
         "@types/file-saver": "^2.0.7",
         "@types/node": "^24.0.3",
+        "@types/qs": "^6.14.0",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react-swc": "^3.9.0",
