--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "concurrently \"vite\" \"bash -c 'source venv/bin/activate && python server.py'\"",
         "build": "vite build",
         "preview": "vite preview",
         "deploy": "gh-pages -d dist"
@@ -14,12 +14,14 @@
         "@octokit/rest": "^22.0.0",
         "@tanstack/react-query": "^5.84.1",
         "axios": "^1.11.0",
+        "bareun": "^1.1.0",
         "clsx": "^2.1.1",
         "file-saver": "^2.0.5",
         "framer-motion": "^12.23.9",
         "gray-matter": "^4.0.3",
         "lottie-react": "^2.4.1",
         "lucide-react": "^0.525.0",
+        "node": "^22.18.0",
         "qs": "^6.14.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -46,6 +48,7 @@
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react-swc": "^3.9.0",
         "autoprefixer": "^10.4.21",
+        "concurrently": "^9.2.0",
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
