--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@giscus/react": "^3.1.0",
+        "@mui/material": "^7.3.1",
         "@octokit/rest": "^22.0.0",
         "@tanstack/react-query": "^5.84.1",
         "axios": "^1.11.0",
@@ -25,9 +28,11 @@
         "qs": "^6.14.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
         "react-router-dom": "^7.6.2",
+        "react-toastify": "^11.0.5",
         "rehype-highlight": "^7.0.2",
         "rehype-raw": "^7.0.0",
         "rehype-sanitize": "^6.0.0",
