chore: tsconfig 및 docker 설정변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "target": "ES2021"
     },
-    "lib": ["DOM", "ES2021"],
-    "target": "ES2021"
+    "lib": ["DOM", "ES2021"]
 }
